--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint":"eslint src --ext .ts,.tsx"
+    "lint": "eslint src --ext .ts,.tsx"
   },
   "dependencies": {
     "@rocketseat/eslint-config": "^1.1.3",
     "@types/styled-components": "^5.1.25",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
