--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^2.9.7",
     "@rocketseat/eslint-config": "^1.1.3",
     "@types/styled-components": "^5.1.25",
+    "date-fns": "^2.29.1",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
